# dotrack

./: .gitignore  README.md  pyproject.toml  requirenments.txt
dotrack/: __main__.py  config.py  icon.py  model.py  shared.py  styles.yml  templates.xml  timer.py  todos.json
